// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrderDetailsPanel accepted matches snapshot 1`] = `
<div
  className=""
>
  <div>
    <div>
      <div>
        <ResponsiveImage
          alt="listing1 title"
          className={null}
          image={null}
          nameSet={
            Array [
              Object {
                "name": "landscape-crop",
                "size": "400w",
              },
              Object {
                "name": "landscape-crop2x",
                "size": "800w",
              },
            ]
          }
          noImageMessage={null}
          rootClassName={null}
          sizes="100vw"
        />
      </div>
    </div>
    <div
      className=""
    >
      <AvatarMedium
        user={
          Object {
            "attributes": Object {
              "banned": false,
              "profile": Object {
                "abbreviatedName": "TT",
                "displayName": "provider display name",
              },
            },
            "id": UUID {
              "uuid": "provider",
            },
            "type": "user",
          }
        }
      />
    </div>
    <div>
      <h1>
        <span>
          <span>
            <FormattedMessage
              id="OrderDetailsPanel.orderAcceptedTitle"
              values={
                Object {
                  "customerName": "customer display name",
                }
              }
            />
          </span>
          <FormattedMessage
            id="OrderDetailsPanel.orderAcceptedSubtitle"
            values={
              Object {
                "listingLink": <NamedLink
                  name="ListingPage"
                  params={
                      Object {
                          "id": "listing1",
                          "slug": "listing1-title",
                        }
                  }
              >
                  listing1 title
              </NamedLink>,
              }
            }
          />
        </span>
      </h1>
      <div>
        <FormattedMessage
          id="OrderDetailsPanel.orderAcceptedStatus"
          values={
            Object {
              "providerName": "provider display name",
              "transitionDate": <span>
                <FormattedDate
                    day="numeric"
                    month="short"
                    value={2017-06-01T00:00:00.000Z}
                    year="numeric"
                />
            </span>,
            }
          }
        />
      </div>
    </div>
    <div>
      <div>
        <h3>
          <FormattedMessage
            id="OrderDetailsPanel.bookingBreakdownTitle"
            values={Object {}}
          />
        </h3>
        <BookingBreakdown
          booking={
            Object {
              "attributes": Object {
                "end": 2017-06-13T00:00:00.000Z,
                "start": 2017-06-10T00:00:00.000Z,
              },
              "id": UUID {
                "uuid": "booking1",
              },
              "type": "booking",
            }
          }
          transaction={
            Object {
              "attributes": Object {
                "createdAt": 2017-05-01T00:00:00.000Z,
                "lastTransition": "transition/accept",
                "lastTransitionedAt": 2017-06-01T00:00:00.000Z,
                "lineItems": Array [
                  Object {
                    "code": "line-item/night",
                    "lineTotal": Money {
                      "amount": 16500,
                      "currency": "USD",
                    },
                    "quantity": "3",
                    "reversal": false,
                    "unitPrice": Money {
                      "amount": 5500,
                      "currency": "USD",
                    },
                  },
                  Object {
                    "code": "line-item/provider-commission",
                    "lineTotal": Money {
                      "amount": -100,
                      "currency": "USD",
                    },
                    "reversal": false,
                    "unitPrice": Money {
                      "amount": -100,
                      "currency": "USD",
                    },
                  },
                ],
                "payinTotal": Money {
                  "amount": 16500,
                  "currency": "USD",
                },
                "payoutTotal": Money {
                  "amount": 16400,
                  "currency": "USD",
                },
              },
              "booking": Object {
                "attributes": Object {
                  "end": 2017-06-13T00:00:00.000Z,
                  "start": 2017-06-10T00:00:00.000Z,
                },
                "id": UUID {
                  "uuid": "booking1",
                },
                "type": "booking",
              },
              "customer": Object {
                "attributes": Object {
                  "banned": false,
                  "profile": Object {
                    "abbreviatedName": "TT",
                    "displayName": "customer display name",
                  },
                },
                "id": UUID {
                  "uuid": "customer",
                },
                "type": "user",
              },
              "id": UUID {
                "uuid": "order-accepted",
              },
              "listing": Object {
                "attributes": Object {
                  "address": "listing1 address",
                  "closed": false,
                  "deleted": false,
                  "description": "listing1 description",
                  "geolocation": LatLng {
                    "lat": 40,
                    "lng": 60,
                  },
                  "price": Money {
                    "amount": 5500,
                    "currency": "USD",
                  },
                  "title": "listing1 title",
                },
                "id": UUID {
                  "uuid": "listing1",
                },
                "type": "listing",
              },
              "provider": Object {
                "attributes": Object {
                  "banned": false,
                  "profile": Object {
                    "abbreviatedName": "TT",
                    "displayName": "provider display name",
                  },
                },
                "id": UUID {
                  "uuid": "provider",
                },
                "type": "user",
              },
              "type": "transaction",
            }
          }
          userRole="customer"
        />
      </div>
      <div>
        <div>
          <div>
            <ResponsiveImage
              alt="listing1 title"
              className={null}
              image={null}
              nameSet={
                Array [
                  Object {
                    "name": "landscape-crop",
                    "size": "400w",
                  },
                  Object {
                    "name": "landscape-crop2x",
                    "size": "800w",
                  },
                ]
              }
              noImageMessage={null}
              rootClassName={null}
              sizes="100%"
            />
          </div>
        </div>
        <div>
          <AvatarMedium
            user={
              Object {
                "attributes": Object {
                  "banned": false,
                  "profile": Object {
                    "abbreviatedName": "TT",
                    "displayName": "provider display name",
                  },
                },
                "id": UUID {
                  "uuid": "provider",
                },
                "type": "user",
              }
            }
          />
        </div>
        <div>
          <h2>
            listing1 title
          </h2>
          <p>
            <FormattedMessage
              id="OrderDetailsPanel.hostedBy"
              values={
                Object {
                  "name": "provider display name",
                }
              }
            />
          </p>
        </div>
        <h3>
          <FormattedMessage
            id="OrderDetailsPanel.bookingBreakdownTitle"
            values={Object {}}
          />
        </h3>
        <BookingBreakdown
          booking={
            Object {
              "attributes": Object {
                "end": 2017-06-13T00:00:00.000Z,
                "start": 2017-06-10T00:00:00.000Z,
              },
              "id": UUID {
                "uuid": "booking1",
              },
              "type": "booking",
            }
          }
          transaction={
            Object {
              "attributes": Object {
                "createdAt": 2017-05-01T00:00:00.000Z,
                "lastTransition": "transition/accept",
                "lastTransitionedAt": 2017-06-01T00:00:00.000Z,
                "lineItems": Array [
                  Object {
                    "code": "line-item/night",
                    "lineTotal": Money {
                      "amount": 16500,
                      "currency": "USD",
                    },
                    "quantity": "3",
                    "reversal": false,
                    "unitPrice": Money {
                      "amount": 5500,
                      "currency": "USD",
                    },
                  },
                  Object {
                    "code": "line-item/provider-commission",
                    "lineTotal": Money {
                      "amount": -100,
                      "currency": "USD",
                    },
                    "reversal": false,
                    "unitPrice": Money {
                      "amount": -100,
                      "currency": "USD",
                    },
                  },
                ],
                "payinTotal": Money {
                  "amount": 16500,
                  "currency": "USD",
                },
                "payoutTotal": Money {
                  "amount": 16400,
                  "currency": "USD",
                },
              },
              "booking": Object {
                "attributes": Object {
                  "end": 2017-06-13T00:00:00.000Z,
                  "start": 2017-06-10T00:00:00.000Z,
                },
                "id": UUID {
                  "uuid": "booking1",
                },
                "type": "booking",
              },
              "customer": Object {
                "attributes": Object {
                  "banned": false,
                  "profile": Object {
                    "abbreviatedName": "TT",
                    "displayName": "customer display name",
                  },
                },
                "id": UUID {
                  "uuid": "customer",
                },
                "type": "user",
              },
              "id": UUID {
                "uuid": "order-accepted",
              },
              "listing": Object {
                "attributes": Object {
                  "address": "listing1 address",
                  "closed": false,
                  "deleted": false,
                  "description": "listing1 description",
                  "geolocation": LatLng {
                    "lat": 40,
                    "lng": 60,
                  },
                  "price": Money {
                    "amount": 5500,
                    "currency": "USD",
                  },
                  "title": "listing1 title",
                },
                "id": UUID {
                  "uuid": "listing1",
                },
                "type": "listing",
              },
              "provider": Object {
                "attributes": Object {
                  "banned": false,
                  "profile": Object {
                    "abbreviatedName": "TT",
                    "displayName": "provider display name",
                  },
                },
                "id": UUID {
                  "uuid": "provider",
                },
                "type": "user",
              },
              "type": "transaction",
            }
          }
          userRole="customer"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`OrderDetailsPanel autodeclined matches snapshot 1`] = `
<div
  className=""
>
  <div>
    <div>
      <div>
        <ResponsiveImage
          alt="listing1 title"
          className={null}
          image={null}
          nameSet={
            Array [
              Object {
                "name": "landscape-crop",
                "size": "400w",
              },
              Object {
                "name": "landscape-crop2x",
                "size": "800w",
              },
            ]
          }
          noImageMessage={null}
          rootClassName={null}
          sizes="100vw"
        />
      </div>
    </div>
    <div
      className=""
    >
      <AvatarMedium
        user={
          Object {
            "attributes": Object {
              "banned": false,
              "profile": Object {
                "abbreviatedName": "TT",
                "displayName": "provider display name",
              },
            },
            "id": UUID {
              "uuid": "provider",
            },
            "type": "user",
          }
        }
      />
    </div>
    <div>
      <h1>
        <FormattedMessage
          id="OrderDetailsPanel.orderAutoDeclinedTitle"
          values={
            Object {
              "listingLink": <NamedLink
                name="ListingPage"
                params={
                    Object {
                        "id": "listing1",
                        "slug": "listing1-title",
                      }
                }
            >
                listing1 title
            </NamedLink>,
            }
          }
        />
      </h1>
      <div>
        <FormattedMessage
          id="OrderDetailsPanel.orderAutoDeclinedStatus"
          values={
            Object {
              "providerName": "provider display name",
              "transitionDate": <span>
                <FormattedDate
                    day="numeric"
                    month="short"
                    value={2017-06-01T00:00:00.000Z}
                    year="numeric"
                />
            </span>,
            }
          }
        />
      </div>
    </div>
    <div>
      <div>
        <h3>
          <FormattedMessage
            id="OrderDetailsPanel.bookingBreakdownTitle"
            values={Object {}}
          />
        </h3>
        <BookingBreakdown
          booking={
            Object {
              "attributes": Object {
                "end": 2017-06-13T00:00:00.000Z,
                "start": 2017-06-10T00:00:00.000Z,
              },
              "id": UUID {
                "uuid": "booking1",
              },
              "type": "booking",
            }
          }
          transaction={
            Object {
              "attributes": Object {
                "createdAt": 2017-05-01T00:00:00.000Z,
                "lastTransition": "transition/auto-decline",
                "lastTransitionedAt": 2017-06-01T00:00:00.000Z,
                "lineItems": Array [
                  Object {
                    "code": "line-item/night",
                    "lineTotal": Money {
                      "amount": 16500,
                      "currency": "USD",
                    },
                    "quantity": "3",
                    "reversal": false,
                    "unitPrice": Money {
                      "amount": 5500,
                      "currency": "USD",
                    },
                  },
                  Object {
                    "code": "line-item/provider-commission",
                    "lineTotal": Money {
                      "amount": -100,
                      "currency": "USD",
                    },
                    "reversal": false,
                    "unitPrice": Money {
                      "amount": -100,
                      "currency": "USD",
                    },
                  },
                ],
                "payinTotal": Money {
                  "amount": 16500,
                  "currency": "USD",
                },
                "payoutTotal": Money {
                  "amount": 16400,
                  "currency": "USD",
                },
              },
              "booking": Object {
                "attributes": Object {
                  "end": 2017-06-13T00:00:00.000Z,
                  "start": 2017-06-10T00:00:00.000Z,
                },
                "id": UUID {
                  "uuid": "booking1",
                },
                "type": "booking",
              },
              "customer": Object {
                "attributes": Object {
                  "banned": false,
                  "profile": Object {
                    "abbreviatedName": "TT",
                    "displayName": "customer display name",
                  },
                },
                "id": UUID {
                  "uuid": "customer",
                },
                "type": "user",
              },
              "id": UUID {
                "uuid": "order-autodeclined",
              },
              "listing": Object {
                "attributes": Object {
                  "address": "listing1 address",
                  "closed": false,
                  "deleted": false,
                  "description": "listing1 description",
                  "geolocation": LatLng {
                    "lat": 40,
                    "lng": 60,
                  },
                  "price": Money {
                    "amount": 5500,
                    "currency": "USD",
                  },
                  "title": "listing1 title",
                },
                "id": UUID {
                  "uuid": "listing1",
                },
                "type": "listing",
              },
              "provider": Object {
                "attributes": Object {
                  "banned": false,
                  "profile": Object {
                    "abbreviatedName": "TT",
                    "displayName": "provider display name",
                  },
                },
                "id": UUID {
                  "uuid": "provider",
                },
                "type": "user",
              },
              "type": "transaction",
            }
          }
          userRole="customer"
        />
      </div>
      <div>
        <div>
          <div>
            <ResponsiveImage
              alt="listing1 title"
              className={null}
              image={null}
              nameSet={
                Array [
                  Object {
                    "name": "landscape-crop",
                    "size": "400w",
                  },
                  Object {
                    "name": "landscape-crop2x",
                    "size": "800w",
                  },
                ]
              }
              noImageMessage={null}
              rootClassName={null}
              sizes="100%"
            />
          </div>
        </div>
        <div>
          <AvatarMedium
            user={
              Object {
                "attributes": Object {
                  "banned": false,
                  "profile": Object {
                    "abbreviatedName": "TT",
                    "displayName": "provider display name",
                  },
                },
                "id": UUID {
                  "uuid": "provider",
                },
                "type": "user",
              }
            }
          />
        </div>
        <div>
          <h2>
            listing1 title
          </h2>
          <p>
            <FormattedMessage
              id="OrderDetailsPanel.hostedBy"
              values={
                Object {
                  "name": "provider display name",
                }
              }
            />
          </p>
        </div>
        <h3>
          <FormattedMessage
            id="OrderDetailsPanel.bookingBreakdownTitle"
            values={Object {}}
          />
        </h3>
        <BookingBreakdown
          booking={
            Object {
              "attributes": Object {
                "end": 2017-06-13T00:00:00.000Z,
                "start": 2017-06-10T00:00:00.000Z,
              },
              "id": UUID {
                "uuid": "booking1",
              },
              "type": "booking",
            }
          }
          transaction={
            Object {
              "attributes": Object {
                "createdAt": 2017-05-01T00:00:00.000Z,
                "lastTransition": "transition/auto-decline",
                "lastTransitionedAt": 2017-06-01T00:00:00.000Z,
                "lineItems": Array [
                  Object {
                    "code": "line-item/night",
                    "lineTotal": Money {
                      "amount": 16500,
                      "currency": "USD",
                    },
                    "quantity": "3",
                    "reversal": false,
                    "unitPrice": Money {
                      "amount": 5500,
                      "currency": "USD",
                    },
                  },
                  Object {
                    "code": "line-item/provider-commission",
                    "lineTotal": Money {
                      "amount": -100,
                      "currency": "USD",
                    },
                    "reversal": false,
                    "unitPrice": Money {
                      "amount": -100,
                      "currency": "USD",
                    },
                  },
                ],
                "payinTotal": Money {
                  "amount": 16500,
                  "currency": "USD",
                },
                "payoutTotal": Money {
                  "amount": 16400,
                  "currency": "USD",
                },
              },
              "booking": Object {
                "attributes": Object {
                  "end": 2017-06-13T00:00:00.000Z,
                  "start": 2017-06-10T00:00:00.000Z,
                },
                "id": UUID {
                  "uuid": "booking1",
                },
                "type": "booking",
              },
              "customer": Object {
                "attributes": Object {
                  "banned": false,
                  "profile": Object {
                    "abbreviatedName": "TT",
                    "displayName": "customer display name",
                  },
                },
                "id": UUID {
                  "uuid": "customer",
                },
                "type": "user",
              },
              "id": UUID {
                "uuid": "order-autodeclined",
              },
              "listing": Object {
                "attributes": Object {
                  "address": "listing1 address",
                  "closed": false,
                  "deleted": false,
                  "description": "listing1 description",
                  "geolocation": LatLng {
                    "lat": 40,
                    "lng": 60,
                  },
                  "price": Money {
                    "amount": 5500,
                    "currency": "USD",
                  },
                  "title": "listing1 title",
                },
                "id": UUID {
                  "uuid": "listing1",
                },
                "type": "listing",
              },
              "provider": Object {
                "attributes": Object {
                  "banned": false,
                  "profile": Object {
                    "abbreviatedName": "TT",
                    "displayName": "provider display name",
                  },
                },
                "id": UUID {
                  "uuid": "provider",
                },
                "type": "user",
              },
              "type": "transaction",
            }
          }
          userRole="customer"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`OrderDetailsPanel canceled matches snapshot 1`] = `
<div
  className=""
>
  <div>
    <div>
      <div>
        <ResponsiveImage
          alt="listing1 title"
          className={null}
          image={null}
          nameSet={
            Array [
              Object {
                "name": "landscape-crop",
                "size": "400w",
              },
              Object {
                "name": "landscape-crop2x",
                "size": "800w",
              },
            ]
          }
          noImageMessage={null}
          rootClassName={null}
          sizes="100vw"
        />
      </div>
    </div>
    <div
      className=""
    >
      <AvatarMedium
        user={
          Object {
            "attributes": Object {
              "banned": false,
              "profile": Object {
                "abbreviatedName": "TT",
                "displayName": "provider display name",
              },
            },
            "id": UUID {
              "uuid": "provider",
            },
            "type": "user",
          }
        }
      />
    </div>
    <div>
      <h1>
        <span>
          <span>
            <FormattedMessage
              id="OrderDetailsPanel.orderPreauthorizedTitle"
              values={
                Object {
                  "customerName": "customer display name",
                }
              }
            />
          </span>
          <FormattedMessage
            id="OrderDetailsPanel.orderPreauthorizedSubtitle"
            values={
              Object {
                "listingLink": <NamedLink
                  name="ListingPage"
                  params={
                      Object {
                          "id": "listing1",
                          "slug": "listing1-title",
                        }
                  }
              >
                  listing1 title
              </NamedLink>,
              }
            }
          />
        </span>
      </h1>
      <div>
        <FormattedMessage
          id="OrderDetailsPanel.orderPreauthorizedStatus"
          values={
            Object {
              "providerName": "provider display name",
            }
          }
        />
      </div>
    </div>
    <div>
      <div>
        <h3>
          <FormattedMessage
            id="OrderDetailsPanel.bookingBreakdownTitle"
            values={Object {}}
          />
        </h3>
        <BookingBreakdown
          booking={
            Object {
              "attributes": Object {
                "end": 2017-06-13T00:00:00.000Z,
                "start": 2017-06-10T00:00:00.000Z,
              },
              "id": UUID {
                "uuid": "booking1",
              },
              "type": "booking",
            }
          }
          transaction={
            Object {
              "attributes": Object {
                "createdAt": 2017-05-01T00:00:00.000Z,
                "lastTransition": "transition/preauthorize",
                "lastTransitionedAt": 2017-06-01T00:00:00.000Z,
                "lineItems": Array [
                  Object {
                    "code": "line-item/night",
                    "lineTotal": Money {
                      "amount": 16500,
                      "currency": "USD",
                    },
                    "quantity": "3",
                    "reversal": false,
                    "unitPrice": Money {
                      "amount": 5500,
                      "currency": "USD",
                    },
                  },
                  Object {
                    "code": "line-item/provider-commission",
                    "lineTotal": Money {
                      "amount": -100,
                      "currency": "USD",
                    },
                    "reversal": false,
                    "unitPrice": Money {
                      "amount": -100,
                      "currency": "USD",
                    },
                  },
                ],
                "payinTotal": Money {
                  "amount": 16500,
                  "currency": "USD",
                },
                "payoutTotal": Money {
                  "amount": 16400,
                  "currency": "USD",
                },
              },
              "booking": Object {
                "attributes": Object {
                  "end": 2017-06-13T00:00:00.000Z,
                  "start": 2017-06-10T00:00:00.000Z,
                },
                "id": UUID {
                  "uuid": "booking1",
                },
                "type": "booking",
              },
              "customer": Object {
                "attributes": Object {
                  "banned": false,
                  "profile": Object {
                    "abbreviatedName": "TT",
                    "displayName": "customer display name",
                  },
                },
                "id": UUID {
                  "uuid": "customer",
                },
                "type": "user",
              },
              "id": UUID {
                "uuid": "order-canceled",
              },
              "listing": Object {
                "attributes": Object {
                  "address": "listing1 address",
                  "closed": false,
                  "deleted": false,
                  "description": "listing1 description",
                  "geolocation": LatLng {
                    "lat": 40,
                    "lng": 60,
                  },
                  "price": Money {
                    "amount": 5500,
                    "currency": "USD",
                  },
                  "title": "listing1 title",
                },
                "id": UUID {
                  "uuid": "listing1",
                },
                "type": "listing",
              },
              "provider": Object {
                "attributes": Object {
                  "banned": false,
                  "profile": Object {
                    "abbreviatedName": "TT",
                    "displayName": "provider display name",
                  },
                },
                "id": UUID {
                  "uuid": "provider",
                },
                "type": "user",
              },
              "type": "transaction",
            }
          }
          userRole="customer"
        />
      </div>
      <div>
        <div>
          <div>
            <ResponsiveImage
              alt="listing1 title"
              className={null}
              image={null}
              nameSet={
                Array [
                  Object {
                    "name": "landscape-crop",
                    "size": "400w",
                  },
                  Object {
                    "name": "landscape-crop2x",
                    "size": "800w",
                  },
                ]
              }
              noImageMessage={null}
              rootClassName={null}
              sizes="100%"
            />
          </div>
        </div>
        <div>
          <AvatarMedium
            user={
              Object {
                "attributes": Object {
                  "banned": false,
                  "profile": Object {
                    "abbreviatedName": "TT",
                    "displayName": "provider display name",
                  },
                },
                "id": UUID {
                  "uuid": "provider",
                },
                "type": "user",
              }
            }
          />
        </div>
        <div>
          <h2>
            listing1 title
          </h2>
          <p>
            <FormattedMessage
              id="OrderDetailsPanel.hostedBy"
              values={
                Object {
                  "name": "provider display name",
                }
              }
            />
          </p>
        </div>
        <h3>
          <FormattedMessage
            id="OrderDetailsPanel.bookingBreakdownTitle"
            values={Object {}}
          />
        </h3>
        <BookingBreakdown
          booking={
            Object {
              "attributes": Object {
                "end": 2017-06-13T00:00:00.000Z,
                "start": 2017-06-10T00:00:00.000Z,
              },
              "id": UUID {
                "uuid": "booking1",
              },
              "type": "booking",
            }
          }
          transaction={
            Object {
              "attributes": Object {
                "createdAt": 2017-05-01T00:00:00.000Z,
                "lastTransition": "transition/preauthorize",
                "lastTransitionedAt": 2017-06-01T00:00:00.000Z,
                "lineItems": Array [
                  Object {
                    "code": "line-item/night",
                    "lineTotal": Money {
                      "amount": 16500,
                      "currency": "USD",
                    },
                    "quantity": "3",
                    "reversal": false,
                    "unitPrice": Money {
                      "amount": 5500,
                      "currency": "USD",
                    },
                  },
                  Object {
                    "code": "line-item/provider-commission",
                    "lineTotal": Money {
                      "amount": -100,
                      "currency": "USD",
                    },
                    "reversal": false,
                    "unitPrice": Money {
                      "amount": -100,
                      "currency": "USD",
                    },
                  },
                ],
                "payinTotal": Money {
                  "amount": 16500,
                  "currency": "USD",
                },
                "payoutTotal": Money {
                  "amount": 16400,
                  "currency": "USD",
                },
              },
              "booking": Object {
                "attributes": Object {
                  "end": 2017-06-13T00:00:00.000Z,
                  "start": 2017-06-10T00:00:00.000Z,
                },
                "id": UUID {
                  "uuid": "booking1",
                },
                "type": "booking",
              },
              "customer": Object {
                "attributes": Object {
                  "banned": false,
                  "profile": Object {
                    "abbreviatedName": "TT",
                    "displayName": "customer display name",
                  },
                },
                "id": UUID {
                  "uuid": "customer",
                },
                "type": "user",
              },
              "id": UUID {
                "uuid": "order-canceled",
              },
              "listing": Object {
                "attributes": Object {
                  "address": "listing1 address",
                  "closed": false,
                  "deleted": false,
                  "description": "listing1 description",
                  "geolocation": LatLng {
                    "lat": 40,
                    "lng": 60,
                  },
                  "price": Money {
                    "amount": 5500,
                    "currency": "USD",
                  },
                  "title": "listing1 title",
                },
                "id": UUID {
                  "uuid": "listing1",
                },
                "type": "listing",
              },
              "provider": Object {
                "attributes": Object {
                  "banned": false,
                  "profile": Object {
                    "abbreviatedName": "TT",
                    "displayName": "provider display name",
                  },
                },
                "id": UUID {
                  "uuid": "provider",
                },
                "type": "user",
              },
              "type": "transaction",
            }
          }
          userRole="customer"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`OrderDetailsPanel declined matches snapshot 1`] = `
<div
  className=""
>
  <div>
    <div>
      <div>
        <ResponsiveImage
          alt="listing1 title"
          className={null}
          image={null}
          nameSet={
            Array [
              Object {
                "name": "landscape-crop",
                "size": "400w",
              },
              Object {
                "name": "landscape-crop2x",
                "size": "800w",
              },
            ]
          }
          noImageMessage={null}
          rootClassName={null}
          sizes="100vw"
        />
      </div>
    </div>
    <div
      className=""
    >
      <AvatarMedium
        user={
          Object {
            "attributes": Object {
              "banned": false,
              "profile": Object {
                "abbreviatedName": "TT",
                "displayName": "provider display name",
              },
            },
            "id": UUID {
              "uuid": "provider",
            },
            "type": "user",
          }
        }
      />
    </div>
    <div>
      <h1>
        <FormattedMessage
          id="OrderDetailsPanel.orderDeclinedTitle"
          values={
            Object {
              "listingLink": <NamedLink
                name="ListingPage"
                params={
                    Object {
                        "id": "listing1",
                        "slug": "listing1-title",
                      }
                }
            >
                listing1 title
            </NamedLink>,
            }
          }
        />
      </h1>
      <div>
        <FormattedMessage
          id="OrderDetailsPanel.orderDeclinedStatus"
          values={
            Object {
              "providerName": "provider display name",
              "transitionDate": <span>
                <FormattedDate
                    day="numeric"
                    month="short"
                    value={2017-06-01T00:00:00.000Z}
                    year="numeric"
                />
            </span>,
            }
          }
        />
      </div>
    </div>
    <div>
      <div>
        <h3>
          <FormattedMessage
            id="OrderDetailsPanel.bookingBreakdownTitle"
            values={Object {}}
          />
        </h3>
        <BookingBreakdown
          booking={
            Object {
              "attributes": Object {
                "end": 2017-06-13T00:00:00.000Z,
                "start": 2017-06-10T00:00:00.000Z,
              },
              "id": UUID {
                "uuid": "booking1",
              },
              "type": "booking",
            }
          }
          transaction={
            Object {
              "attributes": Object {
                "createdAt": 2017-05-01T00:00:00.000Z,
                "lastTransition": "transition/decline",
                "lastTransitionedAt": 2017-06-01T00:00:00.000Z,
                "lineItems": Array [
                  Object {
                    "code": "line-item/night",
                    "lineTotal": Money {
                      "amount": 16500,
                      "currency": "USD",
                    },
                    "quantity": "3",
                    "reversal": false,
                    "unitPrice": Money {
                      "amount": 5500,
                      "currency": "USD",
                    },
                  },
                  Object {
                    "code": "line-item/provider-commission",
                    "lineTotal": Money {
                      "amount": -100,
                      "currency": "USD",
                    },
                    "reversal": false,
                    "unitPrice": Money {
                      "amount": -100,
                      "currency": "USD",
                    },
                  },
                ],
                "payinTotal": Money {
                  "amount": 16500,
                  "currency": "USD",
                },
                "payoutTotal": Money {
                  "amount": 16400,
                  "currency": "USD",
                },
              },
              "booking": Object {
                "attributes": Object {
                  "end": 2017-06-13T00:00:00.000Z,
                  "start": 2017-06-10T00:00:00.000Z,
                },
                "id": UUID {
                  "uuid": "booking1",
                },
                "type": "booking",
              },
              "customer": Object {
                "attributes": Object {
                  "banned": false,
                  "profile": Object {
                    "abbreviatedName": "TT",
                    "displayName": "customer display name",
                  },
                },
                "id": UUID {
                  "uuid": "customer",
                },
                "type": "user",
              },
              "id": UUID {
                "uuid": "order-declined",
              },
              "listing": Object {
                "attributes": Object {
                  "address": "listing1 address",
                  "closed": false,
                  "deleted": false,
                  "description": "listing1 description",
                  "geolocation": LatLng {
                    "lat": 40,
                    "lng": 60,
                  },
                  "price": Money {
                    "amount": 5500,
                    "currency": "USD",
                  },
                  "title": "listing1 title",
                },
                "id": UUID {
                  "uuid": "listing1",
                },
                "type": "listing",
              },
              "provider": Object {
                "attributes": Object {
                  "banned": false,
                  "profile": Object {
                    "abbreviatedName": "TT",
                    "displayName": "provider display name",
                  },
                },
                "id": UUID {
                  "uuid": "provider",
                },
                "type": "user",
              },
              "type": "transaction",
            }
          }
          userRole="customer"
        />
      </div>
      <div>
        <div>
          <div>
            <ResponsiveImage
              alt="listing1 title"
              className={null}
              image={null}
              nameSet={
                Array [
                  Object {
                    "name": "landscape-crop",
                    "size": "400w",
                  },
                  Object {
                    "name": "landscape-crop2x",
                    "size": "800w",
                  },
                ]
              }
              noImageMessage={null}
              rootClassName={null}
              sizes="100%"
            />
          </div>
        </div>
        <div>
          <AvatarMedium
            user={
              Object {
                "attributes": Object {
                  "banned": false,
                  "profile": Object {
                    "abbreviatedName": "TT",
                    "displayName": "provider display name",
                  },
                },
                "id": UUID {
                  "uuid": "provider",
                },
                "type": "user",
              }
            }
          />
        </div>
        <div>
          <h2>
            listing1 title
          </h2>
          <p>
            <FormattedMessage
              id="OrderDetailsPanel.hostedBy"
              values={
                Object {
                  "name": "provider display name",
                }
              }
            />
          </p>
        </div>
        <h3>
          <FormattedMessage
            id="OrderDetailsPanel.bookingBreakdownTitle"
            values={Object {}}
          />
        </h3>
        <BookingBreakdown
          booking={
            Object {
              "attributes": Object {
                "end": 2017-06-13T00:00:00.000Z,
                "start": 2017-06-10T00:00:00.000Z,
              },
              "id": UUID {
                "uuid": "booking1",
              },
              "type": "booking",
            }
          }
          transaction={
            Object {
              "attributes": Object {
                "createdAt": 2017-05-01T00:00:00.000Z,
                "lastTransition": "transition/decline",
                "lastTransitionedAt": 2017-06-01T00:00:00.000Z,
                "lineItems": Array [
                  Object {
                    "code": "line-item/night",
                    "lineTotal": Money {
                      "amount": 16500,
                      "currency": "USD",
                    },
                    "quantity": "3",
                    "reversal": false,
                    "unitPrice": Money {
                      "amount": 5500,
                      "currency": "USD",
                    },
                  },
                  Object {
                    "code": "line-item/provider-commission",
                    "lineTotal": Money {
                      "amount": -100,
                      "currency": "USD",
                    },
                    "reversal": false,
                    "unitPrice": Money {
                      "amount": -100,
                      "currency": "USD",
                    },
                  },
                ],
                "payinTotal": Money {
                  "amount": 16500,
                  "currency": "USD",
                },
                "payoutTotal": Money {
                  "amount": 16400,
                  "currency": "USD",
                },
              },
              "booking": Object {
                "attributes": Object {
                  "end": 2017-06-13T00:00:00.000Z,
                  "start": 2017-06-10T00:00:00.000Z,
                },
                "id": UUID {
                  "uuid": "booking1",
                },
                "type": "booking",
              },
              "customer": Object {
                "attributes": Object {
                  "banned": false,
                  "profile": Object {
                    "abbreviatedName": "TT",
                    "displayName": "customer display name",
                  },
                },
                "id": UUID {
                  "uuid": "customer",
                },
                "type": "user",
              },
              "id": UUID {
                "uuid": "order-declined",
              },
              "listing": Object {
                "attributes": Object {
                  "address": "listing1 address",
                  "closed": false,
                  "deleted": false,
                  "description": "listing1 description",
                  "geolocation": LatLng {
                    "lat": 40,
                    "lng": 60,
                  },
                  "price": Money {
                    "amount": 5500,
                    "currency": "USD",
                  },
                  "title": "listing1 title",
                },
                "id": UUID {
                  "uuid": "listing1",
                },
                "type": "listing",
              },
              "provider": Object {
                "attributes": Object {
                  "banned": false,
                  "profile": Object {
                    "abbreviatedName": "TT",
                    "displayName": "provider display name",
                  },
                },
                "id": UUID {
                  "uuid": "provider",
                },
                "type": "user",
              },
              "type": "transaction",
            }
          }
          userRole="customer"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`OrderDetailsPanel delivered matches snapshot 1`] = `
<div
  className=""
>
  <div>
    <div>
      <div>
        <ResponsiveImage
          alt="listing1 title"
          className={null}
          image={null}
          nameSet={
            Array [
              Object {
                "name": "landscape-crop",
                "size": "400w",
              },
              Object {
                "name": "landscape-crop2x",
                "size": "800w",
              },
            ]
          }
          noImageMessage={null}
          rootClassName={null}
          sizes="100vw"
        />
      </div>
    </div>
    <div
      className=""
    >
      <AvatarMedium
        user={
          Object {
            "attributes": Object {
              "banned": false,
              "profile": Object {
                "abbreviatedName": "TT",
                "displayName": "provider display name",
              },
            },
            "id": UUID {
              "uuid": "provider",
            },
            "type": "user",
          }
        }
      />
    </div>
    <div>
      <h1>
        <FormattedMessage
          id="OrderDetailsPanel.orderDeliveredTitle"
          values={
            Object {
              "listingLink": <NamedLink
                name="ListingPage"
                params={
                    Object {
                        "id": "listing1",
                        "slug": "listing1-title",
                      }
                }
            >
                listing1 title
            </NamedLink>,
            }
          }
        />
      </h1>
      <div>
        <FormattedMessage
          id="OrderDetailsPanel.orderDeliveredStatus"
          values={
            Object {
              "providerName": "provider display name",
              "transitionDate": <span>
                <FormattedDate
                    day="numeric"
                    month="short"
                    value={2017-06-01T00:00:00.000Z}
                    year="numeric"
                />
            </span>,
            }
          }
        />
      </div>
    </div>
    <div>
      <div>
        <h3>
          <FormattedMessage
            id="OrderDetailsPanel.bookingBreakdownTitle"
            values={Object {}}
          />
        </h3>
        <BookingBreakdown
          booking={
            Object {
              "attributes": Object {
                "end": 2017-06-13T00:00:00.000Z,
                "start": 2017-06-10T00:00:00.000Z,
              },
              "id": UUID {
                "uuid": "booking1",
              },
              "type": "booking",
            }
          }
          transaction={
            Object {
              "attributes": Object {
                "createdAt": 2017-05-01T00:00:00.000Z,
                "lastTransition": "transition/mark-delivered",
                "lastTransitionedAt": 2017-06-01T00:00:00.000Z,
                "lineItems": Array [
                  Object {
                    "code": "line-item/night",
                    "lineTotal": Money {
                      "amount": 16500,
                      "currency": "USD",
                    },
                    "quantity": "3",
                    "reversal": false,
                    "unitPrice": Money {
                      "amount": 5500,
                      "currency": "USD",
                    },
                  },
                  Object {
                    "code": "line-item/provider-commission",
                    "lineTotal": Money {
                      "amount": -100,
                      "currency": "USD",
                    },
                    "reversal": false,
                    "unitPrice": Money {
                      "amount": -100,
                      "currency": "USD",
                    },
                  },
                ],
                "payinTotal": Money {
                  "amount": 16500,
                  "currency": "USD",
                },
                "payoutTotal": Money {
                  "amount": 16400,
                  "currency": "USD",
                },
              },
              "booking": Object {
                "attributes": Object {
                  "end": 2017-06-13T00:00:00.000Z,
                  "start": 2017-06-10T00:00:00.000Z,
                },
                "id": UUID {
                  "uuid": "booking1",
                },
                "type": "booking",
              },
              "customer": Object {
                "attributes": Object {
                  "banned": false,
                  "profile": Object {
                    "abbreviatedName": "TT",
                    "displayName": "customer display name",
                  },
                },
                "id": UUID {
                  "uuid": "customer",
                },
                "type": "user",
              },
              "id": UUID {
                "uuid": "order-delivered",
              },
              "listing": Object {
                "attributes": Object {
                  "address": "listing1 address",
                  "closed": false,
                  "deleted": false,
                  "description": "listing1 description",
                  "geolocation": LatLng {
                    "lat": 40,
                    "lng": 60,
                  },
                  "price": Money {
                    "amount": 5500,
                    "currency": "USD",
                  },
                  "title": "listing1 title",
                },
                "id": UUID {
                  "uuid": "listing1",
                },
                "type": "listing",
              },
              "provider": Object {
                "attributes": Object {
                  "banned": false,
                  "profile": Object {
                    "abbreviatedName": "TT",
                    "displayName": "provider display name",
                  },
                },
                "id": UUID {
                  "uuid": "provider",
                },
                "type": "user",
              },
              "type": "transaction",
            }
          }
          userRole="customer"
        />
      </div>
      <div>
        <div>
          <div>
            <ResponsiveImage
              alt="listing1 title"
              className={null}
              image={null}
              nameSet={
                Array [
                  Object {
                    "name": "landscape-crop",
                    "size": "400w",
                  },
                  Object {
                    "name": "landscape-crop2x",
                    "size": "800w",
                  },
                ]
              }
              noImageMessage={null}
              rootClassName={null}
              sizes="100%"
            />
          </div>
        </div>
        <div>
          <AvatarMedium
            user={
              Object {
                "attributes": Object {
                  "banned": false,
                  "profile": Object {
                    "abbreviatedName": "TT",
                    "displayName": "provider display name",
                  },
                },
                "id": UUID {
                  "uuid": "provider",
                },
                "type": "user",
              }
            }
          />
        </div>
        <div>
          <h2>
            listing1 title
          </h2>
          <p>
            <FormattedMessage
              id="OrderDetailsPanel.hostedBy"
              values={
                Object {
                  "name": "provider display name",
                }
              }
            />
          </p>
        </div>
        <h3>
          <FormattedMessage
            id="OrderDetailsPanel.bookingBreakdownTitle"
            values={Object {}}
          />
        </h3>
        <BookingBreakdown
          booking={
            Object {
              "attributes": Object {
                "end": 2017-06-13T00:00:00.000Z,
                "start": 2017-06-10T00:00:00.000Z,
              },
              "id": UUID {
                "uuid": "booking1",
              },
              "type": "booking",
            }
          }
          transaction={
            Object {
              "attributes": Object {
                "createdAt": 2017-05-01T00:00:00.000Z,
                "lastTransition": "transition/mark-delivered",
                "lastTransitionedAt": 2017-06-01T00:00:00.000Z,
                "lineItems": Array [
                  Object {
                    "code": "line-item/night",
                    "lineTotal": Money {
                      "amount": 16500,
                      "currency": "USD",
                    },
                    "quantity": "3",
                    "reversal": false,
                    "unitPrice": Money {
                      "amount": 5500,
                      "currency": "USD",
                    },
                  },
                  Object {
                    "code": "line-item/provider-commission",
                    "lineTotal": Money {
                      "amount": -100,
                      "currency": "USD",
                    },
                    "reversal": false,
                    "unitPrice": Money {
                      "amount": -100,
                      "currency": "USD",
                    },
                  },
                ],
                "payinTotal": Money {
                  "amount": 16500,
                  "currency": "USD",
                },
                "payoutTotal": Money {
                  "amount": 16400,
                  "currency": "USD",
                },
              },
              "booking": Object {
                "attributes": Object {
                  "end": 2017-06-13T00:00:00.000Z,
                  "start": 2017-06-10T00:00:00.000Z,
                },
                "id": UUID {
                  "uuid": "booking1",
                },
                "type": "booking",
              },
              "customer": Object {
                "attributes": Object {
                  "banned": false,
                  "profile": Object {
                    "abbreviatedName": "TT",
                    "displayName": "customer display name",
                  },
                },
                "id": UUID {
                  "uuid": "customer",
                },
                "type": "user",
              },
              "id": UUID {
                "uuid": "order-delivered",
              },
              "listing": Object {
                "attributes": Object {
                  "address": "listing1 address",
                  "closed": false,
                  "deleted": false,
                  "description": "listing1 description",
                  "geolocation": LatLng {
                    "lat": 40,
                    "lng": 60,
                  },
                  "price": Money {
                    "amount": 5500,
                    "currency": "USD",
                  },
                  "title": "listing1 title",
                },
                "id": UUID {
                  "uuid": "listing1",
                },
                "type": "listing",
              },
              "provider": Object {
                "attributes": Object {
                  "banned": false,
                  "profile": Object {
                    "abbreviatedName": "TT",
                    "displayName": "provider display name",
                  },
                },
                "id": UUID {
                  "uuid": "provider",
                },
                "type": "user",
              },
              "type": "transaction",
            }
          }
          userRole="customer"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`OrderDetailsPanel preauthorized matches snapshot 1`] = `
<div
  className=""
>
  <div>
    <div>
      <div>
        <ResponsiveImage
          alt="listing1 title"
          className={null}
          image={null}
          nameSet={
            Array [
              Object {
                "name": "landscape-crop",
                "size": "400w",
              },
              Object {
                "name": "landscape-crop2x",
                "size": "800w",
              },
            ]
          }
          noImageMessage={null}
          rootClassName={null}
          sizes="100vw"
        />
      </div>
    </div>
    <div
      className=""
    >
      <AvatarMedium
        user={
          Object {
            "attributes": Object {
              "banned": false,
              "profile": Object {
                "abbreviatedName": "TT",
                "displayName": "provider display name",
              },
            },
            "id": UUID {
              "uuid": "provider",
            },
            "type": "user",
          }
        }
      />
    </div>
    <div>
      <h1>
        <span>
          <span>
            <FormattedMessage
              id="OrderDetailsPanel.orderPreauthorizedTitle"
              values={
                Object {
                  "customerName": "customer display name",
                }
              }
            />
          </span>
          <FormattedMessage
            id="OrderDetailsPanel.orderPreauthorizedSubtitle"
            values={
              Object {
                "listingLink": <NamedLink
                  name="ListingPage"
                  params={
                      Object {
                          "id": "listing1",
                          "slug": "listing1-title",
                        }
                  }
              >
                  listing1 title
              </NamedLink>,
              }
            }
          />
        </span>
      </h1>
      <div>
        <FormattedMessage
          id="OrderDetailsPanel.orderPreauthorizedStatus"
          values={
            Object {
              "providerName": "provider display name",
            }
          }
        />
      </div>
    </div>
    <div>
      <div>
        <h3>
          <FormattedMessage
            id="OrderDetailsPanel.bookingBreakdownTitle"
            values={Object {}}
          />
        </h3>
        <BookingBreakdown
          booking={
            Object {
              "attributes": Object {
                "end": 2017-06-13T00:00:00.000Z,
                "start": 2017-06-10T00:00:00.000Z,
              },
              "id": UUID {
                "uuid": "booking1",
              },
              "type": "booking",
            }
          }
          transaction={
            Object {
              "attributes": Object {
                "createdAt": 2017-05-01T00:00:00.000Z,
                "lastTransition": "transition/preauthorize",
                "lastTransitionedAt": 2017-06-01T00:00:00.000Z,
                "lineItems": Array [
                  Object {
                    "code": "line-item/night",
                    "lineTotal": Money {
                      "amount": 16500,
                      "currency": "USD",
                    },
                    "quantity": "3",
                    "reversal": false,
                    "unitPrice": Money {
                      "amount": 5500,
                      "currency": "USD",
                    },
                  },
                  Object {
                    "code": "line-item/provider-commission",
                    "lineTotal": Money {
                      "amount": -100,
                      "currency": "USD",
                    },
                    "reversal": false,
                    "unitPrice": Money {
                      "amount": -100,
                      "currency": "USD",
                    },
                  },
                ],
                "payinTotal": Money {
                  "amount": 16500,
                  "currency": "USD",
                },
                "payoutTotal": Money {
                  "amount": 16400,
                  "currency": "USD",
                },
              },
              "booking": Object {
                "attributes": Object {
                  "end": 2017-06-13T00:00:00.000Z,
                  "start": 2017-06-10T00:00:00.000Z,
                },
                "id": UUID {
                  "uuid": "booking1",
                },
                "type": "booking",
              },
              "customer": Object {
                "attributes": Object {
                  "banned": false,
                  "profile": Object {
                    "abbreviatedName": "TT",
                    "displayName": "customer display name",
                  },
                },
                "id": UUID {
                  "uuid": "customer",
                },
                "type": "user",
              },
              "id": UUID {
                "uuid": "order-preauthorized",
              },
              "listing": Object {
                "attributes": Object {
                  "address": "listing1 address",
                  "closed": false,
                  "deleted": false,
                  "description": "listing1 description",
                  "geolocation": LatLng {
                    "lat": 40,
                    "lng": 60,
                  },
                  "price": Money {
                    "amount": 5500,
                    "currency": "USD",
                  },
                  "title": "listing1 title",
                },
                "id": UUID {
                  "uuid": "listing1",
                },
                "type": "listing",
              },
              "provider": Object {
                "attributes": Object {
                  "banned": false,
                  "profile": Object {
                    "abbreviatedName": "TT",
                    "displayName": "provider display name",
                  },
                },
                "id": UUID {
                  "uuid": "provider",
                },
                "type": "user",
              },
              "type": "transaction",
            }
          }
          userRole="customer"
        />
      </div>
      <div>
        <div>
          <div>
            <ResponsiveImage
              alt="listing1 title"
              className={null}
              image={null}
              nameSet={
                Array [
                  Object {
                    "name": "landscape-crop",
                    "size": "400w",
                  },
                  Object {
                    "name": "landscape-crop2x",
                    "size": "800w",
                  },
                ]
              }
              noImageMessage={null}
              rootClassName={null}
              sizes="100%"
            />
          </div>
        </div>
        <div>
          <AvatarMedium
            user={
              Object {
                "attributes": Object {
                  "banned": false,
                  "profile": Object {
                    "abbreviatedName": "TT",
                    "displayName": "provider display name",
                  },
                },
                "id": UUID {
                  "uuid": "provider",
                },
                "type": "user",
              }
            }
          />
        </div>
        <div>
          <h2>
            listing1 title
          </h2>
          <p>
            <FormattedMessage
              id="OrderDetailsPanel.hostedBy"
              values={
                Object {
                  "name": "provider display name",
                }
              }
            />
          </p>
        </div>
        <h3>
          <FormattedMessage
            id="OrderDetailsPanel.bookingBreakdownTitle"
            values={Object {}}
          />
        </h3>
        <BookingBreakdown
          booking={
            Object {
              "attributes": Object {
                "end": 2017-06-13T00:00:00.000Z,
                "start": 2017-06-10T00:00:00.000Z,
              },
              "id": UUID {
                "uuid": "booking1",
              },
              "type": "booking",
            }
          }
          transaction={
            Object {
              "attributes": Object {
                "createdAt": 2017-05-01T00:00:00.000Z,
                "lastTransition": "transition/preauthorize",
                "lastTransitionedAt": 2017-06-01T00:00:00.000Z,
                "lineItems": Array [
                  Object {
                    "code": "line-item/night",
                    "lineTotal": Money {
                      "amount": 16500,
                      "currency": "USD",
                    },
                    "quantity": "3",
                    "reversal": false,
                    "unitPrice": Money {
                      "amount": 5500,
                      "currency": "USD",
                    },
                  },
                  Object {
                    "code": "line-item/provider-commission",
                    "lineTotal": Money {
                      "amount": -100,
                      "currency": "USD",
                    },
                    "reversal": false,
                    "unitPrice": Money {
                      "amount": -100,
                      "currency": "USD",
                    },
                  },
                ],
                "payinTotal": Money {
                  "amount": 16500,
                  "currency": "USD",
                },
                "payoutTotal": Money {
                  "amount": 16400,
                  "currency": "USD",
                },
              },
              "booking": Object {
                "attributes": Object {
                  "end": 2017-06-13T00:00:00.000Z,
                  "start": 2017-06-10T00:00:00.000Z,
                },
                "id": UUID {
                  "uuid": "booking1",
                },
                "type": "booking",
              },
              "customer": Object {
                "attributes": Object {
                  "banned": false,
                  "profile": Object {
                    "abbreviatedName": "TT",
                    "displayName": "customer display name",
                  },
                },
                "id": UUID {
                  "uuid": "customer",
                },
                "type": "user",
              },
              "id": UUID {
                "uuid": "order-preauthorized",
              },
              "listing": Object {
                "attributes": Object {
                  "address": "listing1 address",
                  "closed": false,
                  "deleted": false,
                  "description": "listing1 description",
                  "geolocation": LatLng {
                    "lat": 40,
                    "lng": 60,
                  },
                  "price": Money {
                    "amount": 5500,
                    "currency": "USD",
                  },
                  "title": "listing1 title",
                },
                "id": UUID {
                  "uuid": "listing1",
                },
                "type": "listing",
              },
              "provider": Object {
                "attributes": Object {
                  "banned": false,
                  "profile": Object {
                    "abbreviatedName": "TT",
                    "displayName": "provider display name",
                  },
                },
                "id": UUID {
                  "uuid": "provider",
                },
                "type": "user",
              },
              "type": "transaction",
            }
          }
          userRole="customer"
        />
      </div>
    </div>
  </div>
</div>
`;
